# tenant-management-backend

./: pyproject.toml  requirements.txt
app/: main.py
app/core/: authorization.py  database.py  dependencies.py  lifespan.py  settings.py
app/exceptions/: custom_exception.py  handlers.py
app/models/: __init__.py  adjustment.py  base.py  document.py  enums.py  expense.py  payment.py  property.py  refresh_token.py  rent_ledger.py  tenant.py  unit.py  user.py  utility_bill.py
app/routes/: adjustment.py  auth.py  document.py  expense.py  payment.py  property.py  rent_ledger.py  tenant.py  unit.py  user.py  utility.py
app/schemas/: __init__.py  adjustment_schema.py  auth_schema.py  document_schema.py  expense_schema.py  payment_schema.py  property_schema.py  rent_ledger_schema.py  tenant_schema.py  unit_schema.py  user_schema.py  utility_schema.py
app/security/: dependencies.py  jwt.py  password.py
app/serializers/: document_serializer.py
app/services/: __init__.py  adjustment_service.py  auth_service.py  cloudflare_service.py  document_service.py  expense_service.py  payment_service.py  property_service.py  rent_ledger_service.py  tenant_service.py  unit_service.py  user_service.py  utility_service.py
app/utils/: responses.py
migrations/models/: 10_20260114214543_update.py  11_20260114222752_update.py  12_20260114223043_update.py  13_20260115094649_update.py  14_20260115115216_update.py  15_20260116130730_update.py  16_20260118113037_update.py  4_20260104225411_None.py  5_20260106134324_update.py  6_20260108130402_update.py  7_20260108164915_update.py  (+2 more)
