[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aerich>=0.9.2",
    "asyncpg>=0.31.0",
    "bcrypt==4.3.0",
    "blinker>=1.9.0",
    "boto3>=1.42.22",
    "cloudinary>=1.44.1",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.128.0",
    "fastapi-jwt[authlib]>=0.3.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "tomli>=2.3.0",
    "tortoise-orm>=0.25.3",
    "uvicorn>=0.40.0",
    "requests>=2.32.5",
]

[tool.aerich]
tortoise_orm = "app.core.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
